--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
 
 					<ul class="lili">
 						<li>
-							<a class="" href="http://www.discoverevents.eu/home/">Login</a>
+							<a class="" href="http://tedxostrava.thebrainity.com/">Login</a>
 						</li>
 						<li>
-							<a class="" href="mailto: margetova@aol.com">Contact</a>
+							<a class="" href="http://www.thebrainity.com/index.html">Contact</a>
 						</li>
 						<li>
-							<a class="" href="">Request demo</a>
+							<a class="" href="mailto:jakub.musil@thebrainity.com">Request demo</a>
 						</li>
 
 		          	</ul>
@@ -201,29 +201,6 @@
 		<!-- END FEATURES SECTION -->
 
 
-      <footer class="dark-text">
-			<div class="container">
-				<div class="contact-box centered-content">
-
-					<ul class="lili">
-						<li>
-							<a class="" href="http://www.discoverevents.eu/home/">TEDx Stories</a>
-						</li>
-						<li>
-							<a class="" href="mailto: margetova@aol.com">Contact</a>
-						</li>
-						<li>
-							<a class="" href="">Donate</a>
-						</li>
-						<li>
-							<a class="" href="https://www.facebook.com/InspirationsAndIdeas"><img src="img/fb.png" class="fb" height="50" width="50"></a>
-						</li>
-		          	</ul>
-
-
-				</div>
-			</div>
-		</footer>
 
 		</section>
 		<!-- END FEATURES SECTION -->
