--- a/index.html
+++ b/index.html
@@ -172,7 +172,24 @@
 
 		</section>
 		<!-- END MOCKUP AND WIREFRAMING SECTION -->
+		<section class="tedxs">
+			<h4 class="text-center" style="margin-bottom: 20px;">TEDx apps running on our platform</h4>
+			<div class="partners" id="cliencts">
+                        <ul class="list-inline">
+                            <li>
+                                <img src="img/partner_vienna.png" class="img-responsive center-block">
+                            </li>
+                            <li>
+                                <a href="https://play.google.com/store/apps/details?id=com.tedx.brixton" target="_blank"><img src="img/partner_brixton.png" class="img-responsive center-block"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.microsoft.com/en-us/store/apps/tedxostrava-2015/9nblggh20c4g"><img src="img/partner_ostrava.png" class="img-responsive center-block"></a>
+                            </li>
 
+                        </ul>
+
+                    </div>
+		</section>
 
 
       <footer class="dark-text">
