--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 		<!-- START META INFORMATIONS -->
 		<meta name="content-type" contet="content/html; charset=utf-8">
-      	<meta name="author" content="Waterfall Lab">
+      	<meta name="author" content="Brainity">
       	<meta name="description" content="Share inspiration ideas from TEDx conferences with whole world.">
       	<meta name="keywords" content="idea, share, TEDx, conference, share">
       	<meta charset="utf-8">
@@ -14,7 +14,7 @@
 
       	<!-- FACEBOOK OPEN GRAPH METATAGS -->
       	<meta property="og:title" content="Build TEDx community"/>
-		<meta property="og:image" content="https://trello-attachments.s3.amazonaws.com/525891a2c373fd773e0033d7/53c92df680c71792d0df2d5e/1340x617/d9aa385d6679561516c229bf6fef1390/macbook_air.png">
+		<meta property="og:image" content="https://trello-attachments.s3.amazonaws.com/5585ac604e4d95cb6a64c0a7/2000x1328/bfb29fb366a5facc46eade49d81ce795/mockup02.jpg">
       	<meta property="og:site_name" content="Share inspiration and motivation"/>
       	<meta property="og:description" content="Write what you learned from speakers and share motivation with world.">
 
